Update to 1.18